Veracrypt install Activator Realm

--- a/files/com.googlecode.iterm2.plist
+++ b/files/com.googlecode.iterm2.plist
@@ -1737,7 +1737,7 @@
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
-			<string>/Users/pivotal</string>
+			<string>/Users/filip</string>
 		</dict>
 	</array>
 	<key>NoSyncInstallationId</key>
