Add configuration needs for AWS SSO credentials for DPG

--- a/config.yml
+++ b/config.yml
@@ -22,10 +22,12 @@ dotfiles_repo_local_destination: ~/Documents/dotfiles
 dotfiles_files:
   - .zshrc
   - .gitconfig
+  - .aws/config
 
 homebrew_installed_packages:
   - awscli
   - magic-wormhole
+  - pipx
   - scrcpy
   - speedtest-cli
   - svgo
@@ -87,8 +89,8 @@ npm_packages: [ ]
 # - name: webpack
 #   state: present # present/absent/latest, default: present
 #   version: "^2.6" # default: N/A
-pip_packages: [ ]
-# - name: mkdocs
+pipx_packages:
+  - name: ensurepath
 #   state: present # present/absent/latest, default: present
 #   version: "0.16.3" # default: N/A
 
