Add obsidian and RapidApi formerly known as Paw

--- a/config.yml
+++ b/config.yml
@@ -57,7 +57,9 @@ homebrew_cask_apps:
   - logitech-options
   - kaleidoscope
   - ngrok
+  - obsidian
   - paletro
+  - rapidapi
   - resilio-sync
   - slack
   - visual-studio-code
